Fix for sticky header on ios

--- a/src/scss/pages/_structure.scss
+++ b/src/scss/pages/_structure.scss
@@ -51,6 +51,7 @@ nav a {
   height: auto;
   background-color: $secondary-colour;
   position: sticky;
+  position: -webkit-sticky;
   top: 0;
 
   &-main {
